--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -14,7 +14,7 @@ paginate = 5
   themeColor = "green"
 
   # if you set this to 0, only submenu trigger will be visible
-  showMenuItems = 2
+  showMenuItems = 3
 
   # show selector to switch language
   showLanguageSelector = false
@@ -93,6 +93,10 @@ paginate = 5
         identifier = "portfolio"
         name = "Portfolio"
         url = "/portfolio"
+      [[languages.en.menu.main]]
+        identifier = "posts"
+        name = "Posts"
+        url = "/posts"
 
 # [module]
 #   # In case you would like to make changes to the theme and keep it locally in you repository,
