--- a/portfolio/config.toml
+++ b/portfolio/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
 theme = "terminal"
-paginate = 5
+paginate = 3
 
 [params]
   # dir name of your main content (default is `content/posts`).
@@ -66,7 +66,7 @@ paginate = 5
   [languages.en]
     languageName = "English"
     title = "GunnerDev"
-    subtitle = "A simple, retro theme for Hugo"
+    subtitle = "Portfolio"
     owner = ""
     keywords = ""
     copyright = ""
